@@ -5,7 +5,7 @@
  ===========================================================
 
 Tester version pocket en UPX
-Analyse : traduire biblio
+tk_optionMenu à convertir en ttk (tree.tcl)
 
  ===========================================================
 |                                                           |
